[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ground level/GroundBossFightManager.gd" type="Script" id=1]
[ext_resource path="res://src/ground level/GroundRabbit.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Bush.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 545.565, 370.947 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 219, 10 )

[node name="GroundBossFightManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="BossTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Bush" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.0156863, 1 )
position = Vector2( -547, 262 )
scale = Vector2( 2.418, 2.418 )
texture = ExtResource( 4 )

[node name="Bush2" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.0156863, 1 )
position = Vector2( 0, -91 )
scale = Vector2( 2.418, 2.418 )
texture = ExtResource( 4 )

[node name="Bush3" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.0156863, 1 )
position = Vector2( 543.42, 262 )
scale = Vector2( 2.418, 2.418 )
texture = ExtResource( 4 )
flip_h = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -6, 9 )
limit_left = -200
limit_right = 6100
limit_bottom = 120

[node name="BossCameraLocation" type="Node2D" parent="."]

[node name="GroundRabbit" parent="." instance=ExtResource( 3 )]
scale = Vector2( 1.2, 1.2 )

[node name="RabbitStorageLoc" type="Node2D" parent="."]
position = Vector2( 3.17468, -1225.47 )

[node name="BetweenPhaseTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.35
anchor_top = 0.9
anchor_right = 0.65
anchor_bottom = 0.95

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( -693, -81.256 )
rotation = -1.5708
scale = Vector2( 0.796273, 3.54413 )
collision_layer = 32768
collision_mask = 32768
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 680, 244 )
rotation = -1.5708
scale = Vector2( 0.796273, 3.54413 )
collision_layer = 32768
collision_mask = 32768
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BossTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_BossTimer_timeout"]
[connection signal="timeout" from="BetweenPhaseTimer" to="." method="_on_BetweenPhaseTimer_timeout"]
[connection signal="timeout" from="BetweenPhaseTimer" to="GroundRabbit" method="_on_Timer_timeout"]
